; ModuleID = '/home/carl/AnghaBench/Atlas/src/extr_glib-ext.c_g_string_assign_len.c'
source_filename = "/home/carl/AnghaBench/Atlas/src/extr_glib-ext.c_g_string_assign_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @g_string_assign_len(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @g_string_truncate(i32* %7, i32 0)
  %9 = load i32*, i32** %4, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32* @g_string_append_len(i32* %9, i8* %10, i32 %11)
  ret i32* %12
}

declare dso_local i32 @g_string_truncate(i32*, i32) #1

declare dso_local i32* @g_string_append_len(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
